@@ -8,6 +8,9 @@ Changes - Apache::Test change logfile
 
 =item 1.03-dev - 
 
+add skip helper shortcuts: have_min_perl_version,
+have_min_module_version [Stas]
+
 pass to 'use lib' only 'lib/' dirs that actually exist in
 autogenerated t/TEST t/SMOKE and others. [Stas]
 
